--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,15 @@
+/* Reset default settings */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Main styling */
 body{
     background-color: #F3E9DC;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     height: 100%;
-}
-
-button{
-    border: 3px solid #333;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1.2rem;
-    background-color: #F3E9DC;
-    padding: 10px 35px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    transition: 300ms ;
-}
-
-button:hover{
-    background-color: #d9c7ae;
 }
 
 #quote-section{
@@ -42,7 +29,8 @@ button:hover{
     display: block;
 }
 
-.quote-container{
+.quote-container,
+.saved-quote{
     padding: 1rem;
     background-color: #5E3023;
     min-height: 350px;
@@ -56,16 +44,39 @@ button:hover{
     margin: auto;
 }
 
+.quote-container .quote-btn{
+    border: 3px solid #333;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2rem;
+    background-color: #F3E9DC;
+    padding: 10px 35px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition: 300ms ;
+}
+
+.quote-container .quote-btn:hover{
+    background-color: #d9c7ae;
+}
+
 .quote-container .quote-actions{
     display: flex;
     gap: 6px;
 }
 
-.quote-container .quote-actions button{
-    flex: 1;
+.quote-container .quote-actions .save-btn{
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    color:#F3E9DC;
+    fill: #F3E9DC;
+    border: none;
+    margin: auto;
+    cursor: pointer;
 }
 
-.quote-container .quote-text{
+.quote-container .quote-text,
+.saved-quote .quote-text{
     font-size: 1.2rem;
 }
 
@@ -82,7 +93,7 @@ button:hover{
     }
 }
 
-/* other pages style */
+/* other pages styling */
 .saved-quotes-container,
 .shared-quotes-container{
     max-width: 1080px;
@@ -106,20 +117,9 @@ button:hover{
 }
 
 .saved-quote{
-    padding: 1rem;
-    background-color: #5E3023;
-    border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin: auto;
     margin-bottom: 16px;
-}
-
-.saved-quote .quote-text{
-    font-size: 1.2rem;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 .saved-quote .quote-author,
