--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,133 +1,176 @@
 /* Reset default settings */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
 }
 
 /* Main styling */
-body{
-    background-color: #F3E9DC;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 100%;
+body {
+  height: 100%;
+  background-color: #f3e9dc;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  height: 100%;
+  position: relative;
 }
 
-#quote-section{
-    margin-top: 60px;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+#quote-section {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
-.welcome-note{
-    padding: 0 2rem;
-    text-align: center;
+.welcome-note {
+  padding: 0 2rem;
+  text-align: center;
 }
 
-.nav-link-container{
-    text-align: center;
-    display: block;
+.nav-link-container {
+  text-align: center;
+  display: block;
 }
 
 .quote-container,
-.saved-quote{
-    padding: 1rem;
-    background-color: #5E3023;
-    min-height: 350px;
-    max-width: 350px;
-    border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin: auto;
+.saved-quote {
+  padding: 1rem;
+  background-color: #5e3023;
+  min-height: 350px;
+  width: 420px;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: auto;
 }
 
-.quote-container .quote-btn{
-    border: 3px solid #333;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1.2rem;
-    background-color: #F3E9DC;
-    padding: 10px 35px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    transition: 300ms ;
+.quote-container .quote-btn {
+  border: 3px solid #333;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  background-color: #f3e9dc;
+  padding: 10px 35px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  transition: 300ms;
 }
 
-.quote-container .quote-btn:hover{
-    background-color: #d9c7ae;
+.quote-container .quote-btn:hover {
+  background-color: #d9c7ae;
 }
 
-.quote-container .quote-actions{
-    display: flex;
-    gap: 6px;
+.quote-container .quote-actions {
+  display: flex;
+  gap: 6px;
 }
 
-.quote-container .quote-actions .save-btn{
-    display: flex;
-    align-items: center;
-    background-color: transparent;
-    color:#F3E9DC;
-    fill: #F3E9DC;
-    border: none;
-    margin: auto;
-    cursor: pointer;
+.quote-container .quote-actions .save-btn {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  color: #f3e9dc;
+  fill: #f3e9dc;
+  border: none;
+  margin: auto;
+  cursor: pointer;
 }
 
 .quote-container .quote-text,
-.saved-quote .quote-text{
-    font-size: 1.2rem;
+.saved-quote .quote-text {
+  font-size: 1.2rem;
 }
 
 .quote-container .quote-author,
-.quote-container .quote-series{
-    display: block;
-    font-size: 1.2rem;
-    text-align: center;
+.quote-container .quote-series {
+  display: block;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
-@media screen and (max-width: 400px) {
-    .quote-container{
-        width: 80%;
-    }
+@media screen and (max-width: 430px) {
+  .quote-container {
+    width: 90%;
+  }
+}
+
+/* Dynamic styling */
+
+.error-message-container {
+  position: absolute;
+  max-width: 90%;
+  width: fit-content;
+  min-height: fit-content;
+  background-color: #8d4d3b;
+  border-radius: 12px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  color: #fff;
+  gap: 16px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.error-message-container .close-btn {
+  padding: 8px 32px;
+  border: none;
+  background-color: #5e3023;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.d-none {
+  display: none;
 }
 
 /* other pages styling */
 .saved-quotes-container,
-.shared-quotes-container{
-    max-width: 1080px;
-    width: 85%;
-    margin: auto;
-    padding: 60px 0;
+.shared-quotes-container {
+  max-width: 1080px;
+  width: 85%;
+  margin: auto;
+  padding: 60px 0;
 }
 
 .saved-quotes-container .saved-quotes-header,
-.shared-quotes-container .shared-quotes-header{
-    margin-bottom: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.shared-quotes-container .shared-quotes-header {
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .saved-quotes-container .saved-quotes-title,
-.shared-quotes-container .shared-quotes-title{
-    font-size: 24px;
-    font-weight: 500;
+.shared-quotes-container .shared-quotes-title {
+  font-size: 24px;
+  font-weight: 500;
 }
 
-.saved-quote{
-    margin-bottom: 16px;
-    min-height: 100%;
-    min-width: 100%;
+.saved-quote {
+  margin-bottom: 16px;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .saved-quote .quote-author,
-.saved-quote .quote-series{
-    display: block;
-    font-size: 1rem;
+.saved-quote .quote-series {
+  display: block;
+  font-size: 1rem;
 }
 
-.share-link{
-    text-align: right;
+.share-link {
+  text-align: right;
 }
